[package]
name = "json_filter_sorted"
version = "0.1.2"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2021"
description = "Serde JSON sorted and filter"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/AbrarNitk/sorted_json_keys"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
